src/main/java/kotlintoc/simpleKotlinParser.java
package kotlintoc;
// Generated from C:/Moje/Notatki/5 semestr/Kompilatory/Translator/src/main/resources/simpleKotlin.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class simpleKotlinParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		NEWLINE=1, WHITESPACE=2, COMMENT=3, BLOCKCOMMENT=4, INT=5, FLOAT=6, SSTRING=7, 
		SEMICON=8, DOT=9, COLON=10, COMA=11, TRUE=12, FUN=13, FALSE=14, IMP=15, 
		FOR=16, WHILE=17, IF=18, ELSE=19, TYPE=20, VAR=21, RETURN=22, PACKAGE=23, 
		IN=24, NAME=25, ANNOTATION=26, ARASS=27, ASSIGN=28, ARITHMOP=29, MINUS=30, 
		LOGICOP=31, COMPOP=32, INCRDECR=33, ORBRACKET=34, CRBRACKET=35, OBRACE=36, 
		CBRACE=37;
	public static final int
		RULE_prog = 0, RULE_s = 1, RULE_infile = 2, RULE_fun = 3, RULE_funcall = 4, 
		RULE_body = 5, RULE_var = 6, RULE_args = 7, RULE_launchargs = 8, RULE_launcharg = 9, 
		RULE_imppath = 10, RULE_expr = 11, RULE_loop = 12, RULE_cond = 13, RULE_else = 14, 
		RULE_operation = 15, RULE_boolexpr = 16;
	private static String[] makeRuleNames() {
		return new String[] {
			"prog", "s", "infile", "fun", "funcall", "body", "var", "args", "launchargs", 
			"launcharg", "imppath", "expr", "loop", "cond", "else", "operation", 
			"boolexpr"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, "':'", "','", 
			"'true'", "'fun'", "'false'", "'import'", "'for'", "'while'", "'if'", 
			"'else'", null, null, "'return'", "'package'", "'in'", null, null, null, 
			"'='", null, "'-'", null, null, null, "'('", "')'", "'{'", "'}'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "NEWLINE", "WHITESPACE", "COMMENT", "BLOCKCOMMENT", "INT", "FLOAT", 
			"SSTRING", "SEMICON", "DOT", "COLON", "COMA", "TRUE", "FUN", "FALSE", 
			"IMP", "FOR", "WHILE", "IF", "ELSE", "TYPE", "VAR", "RETURN", "PACKAGE", 
			"IN", "NAME", "ANNOTATION", "ARASS", "ASSIGN", "ARITHMOP", "MINUS", "LOGICOP", 
			"COMPOP", "INCRDECR", "ORBRACKET", "CRBRACKET", "OBRACE", "CBRACE"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "simpleKotlin.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public simpleKotlinParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgContext extends ParserRuleContext {
		public SContext s() {
			return getRuleContext(SContext.class,0);
		}
		public List<TerminalNode> NEWLINE() { return getTokens(simpleKotlinParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(simpleKotlinParser.NEWLINE, i);
		}
		public TerminalNode PACKAGE() { return getToken(simpleKotlinParser.PACKAGE, 0); }
		public ImppathContext imppath() {
			return getRuleContext(ImppathContext.class,0);
		}
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof simpleKotlinListener ) ((simpleKotlinListener)listener).enterProg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof simpleKotlinListener ) ((simpleKotlinListener)listener).exitProg(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof simpleKotlinVisitor ) return ((simpleKotlinVisitor<? extends T>)visitor).visitProg(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		int _la;
		try {
			setState(52);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(37);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==NEWLINE) {
					{
					{
					setState(34);
					match(NEWLINE);
					}
					}
					setState(39);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(40);
				s();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(44);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==NEWLINE) {
					{
					{
					setState(41);
					match(NEWLINE);
					}
					}
					setState(46);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(47);
				match(PACKAGE);
				setState(48);
				imppath(0);
				setState(49);
				match(NEWLINE);
				setState(50);
				s();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SContext extends ParserRuleContext {
		public List<TerminalNode> IMP() { return getTokens(simpleKotlinParser.IMP); }
		public TerminalNode IMP(int i) {
			return getToken(simpleKotlinParser.IMP, i);
		}
		public List<ImppathContext> imppath() {
			return getRuleContexts(ImppathContext.class);
		}
		public ImppathContext imppath(int i) {
			return getRuleContext(ImppathContext.class,i);
		}
		public List<InfileContext> infile() {
			return getRuleContexts(InfileContext.class);
		}
		public InfileContext infile(int i) {
			return getRuleContext(InfileContext.class,i);
		}
		public List<TerminalNode> EOF() { return getTokens(simpleKotlinParser.EOF); }
		public TerminalNode EOF(int i) {
			return getToken(simpleKotlinParser.EOF, i);
		}
		public List<TerminalNode> NEWLINE() { return getTokens(simpleKotlinParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(simpleKotlinParser.NEWLINE, i);
		}
		public SContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_s; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof simpleKotlinListener ) ((simpleKotlinListener)listener).enterS(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof simpleKotlinListener ) ((simpleKotlinListener)listener).exitS(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof simpleKotlinVisitor ) return ((simpleKotlinVisitor<? extends T>)visitor).visitS(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SContext s() throws RecognitionException {
		SContext _localctx = new SContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_s);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(63);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==IMP) {
				{
				{
				setState(54);
				match(IMP);
				setState(55);
				imppath(0);
				setState(57); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(56);
					match(NEWLINE);
					}
					}
					setState(59); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==NEWLINE );
				}
				}
				setState(65);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(81); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(66);
				infile();
				setState(79);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
				case 1:
					{
					setState(68); 
					_errHandler.sync(this);
					_la = _input.LA(1);
					do {
						{
						{
						setState(67);
						match(NEWLINE);
						}
						}
						setState(70); 
						_errHandler.sync(this);
						_la = _input.LA(1);
					} while ( _la==NEWLINE );
					}
					break;
				case 2:
					{
					setState(75);
					_errHandler.sync(this);
					_la = _input.LA(1);
					while (_la==NEWLINE) {
						{
						{
						setState(72);
						match(NEWLINE);
						}
						}
						setState(77);
						_errHandler.sync(this);
						_la = _input.LA(1);
					}
					setState(78);
					match(EOF);
					}
					break;
				}
				}
				}
				setState(83); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 69214208L) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class InfileContext extends ParserRuleContext {
		public FunContext fun() {
			return getRuleContext(FunContext.class,0);
		}
		public VarContext var() {
			return getRuleContext(VarContext.class,0);
		}
		public InfileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_infile; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof simpleKotlinListener ) ((simpleKotlinListener)listener).enterInfile(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof simpleKotlinListener ) ((simpleKotlinListener)listener).exitInfile(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof simpleKotlinVisitor ) return ((simpleKotlinVisitor<? extends T>)visitor).visitInfile(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InfileContext infile() throws RecognitionException {
		InfileContext _localctx = new InfileContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_infile);
		try {
			setState(87);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case FUN:
			case ANNOTATION:
				enterOuterAlt(_localctx, 1);
				{
				setState(85);
				fun();
				}
				break;
			case VAR:
				enterOuterAlt(_localctx, 2);
				{
				setState(86);
				var();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FunContext extends ParserRuleContext {
		public TerminalNode FUN() { return getToken(simpleKotlinParser.FUN, 0); }
		public TerminalNode NAME() { return getToken(simpleKotlinParser.NAME, 0); }
		public TerminalNode ORBRACKET() { return getToken(simpleKotlinParser.ORBRACKET, 0); }
		public ArgsContext args() {
			return getRuleContext(ArgsContext.class,0);
		}
		public TerminalNode CRBRACKET() { return getToken(simpleKotlinParser.CRBRACKET, 0); }
		public TerminalNode OBRACE() { return getToken(simpleKotlinParser.OBRACE, 0); }
		public BodyContext body() {
			return getRuleContext(BodyContext.class,0);
		}
		public TerminalNode CBRACE() { return getToken(simpleKotlinParser.CBRACE, 0); }
		public List<TerminalNode> ANNOTATION() { return getTokens(simpleKotlinParser.ANNOTATION); }
		public TerminalNode ANNOTATION(int i) {
			return getToken(simpleKotlinParser.ANNOTATION, i);
		}
		public List<TerminalNode> NEWLINE() { return getTokens(simpleKotlinParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(simpleKotlinParser.NEWLINE, i);
		}
		public TerminalNode COLON() { return getToken(simpleKotlinParser.COLON, 0); }
		public TerminalNode TYPE() { return getToken(simpleKotlinParser.TYPE, 0); }
		public FunContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fun; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof simpleKotlinListener ) ((simpleKotlinListener)listener).enterFun(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof simpleKotlinListener ) ((simpleKotlinListener)listener).exitFun(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof simpleKotlinVisitor ) return ((simpleKotlinVisitor<? extends T>)visitor).visitFun(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FunContext fun() throws RecognitionException {
		FunContext _localctx = new FunContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_fun);
		int _la;
		try {
			int _alt;
			setState(155);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,18,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(97);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==ANNOTATION) {
					{
					{
					setState(89);
					match(ANNOTATION);
					setState(91); 
					_errHandler.sync(this);
					_la = _input.LA(1);
					do {
						{
						{
						setState(90);
						match(NEWLINE);
						}
						}
						setState(93); 
						_errHandler.sync(this);
						_la = _input.LA(1);
					} while ( _la==NEWLINE );
					}
					}
					setState(99);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(100);
				match(FUN);
				setState(101);
				match(NAME);
				setState(102);
				match(ORBRACKET);
				setState(103);
				args();
				setState(104);
				match(CRBRACKET);
				setState(108);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==NEWLINE) {
					{
					{
					setState(105);
					match(NEWLINE);
					}
					}
					setState(110);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(111);
				match(OBRACE);
				setState(115);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,13,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(112);
						match(NEWLINE);
						}
						} 
					}
					setState(117);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,13,_ctx);
				}
				setState(118);
				body(0);
				setState(119);
				match(CBRACE);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(129);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==ANNOTATION) {
					{
					{
					setState(121);
					match(ANNOTATION);
					setState(123); 
					_errHandler.sync(this);
					_la = _input.LA(1);
					do {
						{
						{
						setState(122);
						match(NEWLINE);
						}
						}
						setState(125); 
						_errHandler.sync(this);
						_la = _input.LA(1);
					} while ( _la==NEWLINE );
					}
					}
					setState(131);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(132);
				match(FUN);
				setState(133);
				match(NAME);
				setState(134);
				match(ORBRACKET);
				setState(135);
				args();
				setState(136);
				match(CRBRACKET);
				setState(137);
				match(COLON);
				setState(138);
				match(TYPE);
				setState(142);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==NEWLINE) {
					{
					{
					setState(139);
					match(NEWLINE);
					}
					}
					setState(144);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(145);
				match(OBRACE);
				setState(149);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,17,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(146);
						match(NEWLINE);
						}
						} 
					}
					setState(151);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,17,_ctx);
				}
				setState(152);
				body(0);
				setState(153);
				match(CBRACE);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FuncallContext extends ParserRuleContext {
		public TerminalNode NAME() { return getToken(simpleKotlinParser.NAME, 0); }
		public TerminalNode ORBRACKET() { return getToken(simpleKotlinParser.ORBRACKET, 0); }
		public LaunchargsContext launchargs() {
			return getRuleContext(LaunchargsContext.class,0);
		}
		public TerminalNode CRBRACKET() { return getToken(simpleKotlinParser.CRBRACKET, 0); }
		public FuncallContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funcall; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof simpleKotlinListener ) ((simpleKotlinListener)listener).enterFuncall(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof simpleKotlinListener ) ((simpleKotlinListener)listener).exitFuncall(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof simpleKotlinVisitor ) return ((simpleKotlinVisitor<? extends T>)visitor).visitFuncall(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FuncallContext funcall() throws RecognitionException {
		FuncallContext _localctx = new FuncallContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_funcall);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(157);
			match(NAME);
			setState(158);
			match(ORBRACKET);
			setState(159);
			launchargs();
			setState(160);
			match(CRBRACKET);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BodyContext extends ParserRuleContext {
		public List<TerminalNode> NEWLINE() { return getTokens(simpleKotlinParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(simpleKotlinParser.NEWLINE, i);
		}
		public BodyContext body() {
			return getRuleContext(BodyContext.class,0);
		}
		public VarContext var() {
			return getRuleContext(VarContext.class,0);
		}
		public OperationContext operation() {
			return getRuleContext(OperationContext.class,0);
		}
		public BodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_body; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof simpleKotlinListener ) ((simpleKotlinListener)listener).enterBody(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof simpleKotlinListener ) ((simpleKotlinListener)listener).exitBody(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof simpleKotlinVisitor ) return ((simpleKotlinVisitor<? extends T>)visitor).visitBody(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BodyContext body() throws RecognitionException {
		return body(0);
	}

	private BodyContext body(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		BodyContext _localctx = new BodyContext(_ctx, _parentState);
		BodyContext _prevctx = _localctx;
		int _startState = 10;
		enterRecursionRule(_localctx, 10, RULE_body, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(166);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,19,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(163);
					match(NEWLINE);
					}
					} 
				}
				setState(168);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,19,_ctx);
			}
			}
			_ctx.stop = _input.LT(-1);
			setState(181);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,22,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(179);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,21,_ctx) ) {
					case 1:
						{
						_localctx = new BodyContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_body);
						setState(169);
						if (!(precpred(_ctx, 4))) throw new FailedPredicateException(this, "precpred(_ctx, 4)");
						setState(170);
						var();
						}
						break;
					case 2:
						{
						_localctx = new BodyContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_body);
						setState(171);
						if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
						setState(173); 
						_errHandler.sync(this);
						_alt = 1;
						do {
							switch (_alt) {
							case 1:
								{
								{
								setState(172);
								match(NEWLINE);
								}
								}
								break;
							default:
								throw new NoViableAltException(this);
							}
							setState(175); 
							_errHandler.sync(this);
							_alt = getInterpreter().adaptivePredict(_input,20,_ctx);
						} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
						}
						break;
					case 3:
						{
						_localctx = new BodyContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_body);
						setState(177);
						if (!(precpred(_ctx, 1))) throw new FailedPredicateException(this, "precpred(_ctx, 1)");
						setState(178);
						operation();
						}
						break;
					}
					} 
				}
				setState(183);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,22,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class VarContext extends ParserRuleContext {
		public TerminalNode VAR() { return getToken(simpleKotlinParser.VAR, 0); }
		public TerminalNode NAME() { return getToken(simpleKotlinParser.NAME, 0); }
		public TerminalNode COLON() { return getToken(simpleKotlinParser.COLON, 0); }
		public TerminalNode TYPE() { return getToken(simpleKotlinParser.TYPE, 0); }
		public TerminalNode ASSIGN() { return getToken(simpleKotlinParser.ASSIGN, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public List<TerminalNode> NEWLINE() { return getTokens(simpleKotlinParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(simpleKotlinParser.NEWLINE, i);
		}
		public VarContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_var; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof simpleKotlinListener ) ((simpleKotlinListener)listener).enterVar(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof simpleKotlinListener ) ((simpleKotlinListener)listener).exitVar(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof simpleKotlinVisitor ) return ((simpleKotlinVisitor<? extends T>)visitor).visitVar(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VarContext var() throws RecognitionException {
		VarContext _localctx = new VarContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_var);
		int _la;
		try {
			int _alt;
			setState(210);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,26,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(184);
				match(VAR);
				setState(185);
				match(NAME);
				setState(186);
				match(COLON);
				setState(187);
				match(TYPE);
				setState(188);
				match(ASSIGN);
				setState(192);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==NEWLINE) {
					{
					{
					setState(189);
					match(NEWLINE);
					}
					}
					setState(194);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(195);
				expr(0);
				setState(197); 
				_errHandler.sync(this);
				_alt = 1;
				do {
					switch (_alt) {
					case 1:
						{
						{
						setState(196);
						match(NEWLINE);
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					setState(199); 
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,24,_ctx);
				} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(201);
				match(VAR);
				setState(202);
				match(NAME);
				setState(203);
				match(COLON);
				setState(204);
				match(TYPE);
				setState(206); 
				_errHandler.sync(this);
				_alt = 1;
				do {
					switch (_alt) {
					case 1:
						{
						{
						setState(205);
						match(NEWLINE);
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					setState(208); 
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,25,_ctx);
				} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
